# edage_detection

./: CMakeLists.txt  edage_detection.hpp  filesystem.cpp  filesystem.hpp  grad_edage.cpp  grad_edage.hpp  main.cpp  main_detect_task.cpp  main_detect_task.hpp  notify.cpp  notify.hpp  png_image.cpp  png_image.hpp  readmd.md  roberts.cpp  roberts.hpp  sobel.cpp  sobel_edage.hpp  thread_pool.cpp  thread_pool.hpp
